2026-02-03  G. Branden Robinson <g.branden.robinson@gmail.com>

	[build]: Report gropdf service level in configuration summary.

	* m4/groff.m4 (GROFF_GROPDF_DEPENDENCIES_CHECK): Drop unused
	shell variables `use_gropdf` and `gropdf_missing_deps`.  Add new
	shell variable `gropdf_service_level`, to be used (only) for
	reporting an intelligible meaning to a human in the
	configuration summary.  Default value to "full".  If URW fonts
	are unavailable, demote value to "intermediate".  If Ghostscript
	is unavailable, demote value to "basic".
	* configure.ac: Rearrange summary and disclose gropdf service
	level in it.  Report URW font directory (if applicable) after
	Ghostscript command name and before the gropdf service level,
	since the first two determine the last.

	Completes "action item C" from <https://lists.gnu.org/archive/\
	html/groff/2026-02/msg00004.html>.

2026-02-03  G. Branden Robinson <g.branden.robinson@gmail.com>

	[build]: Kill off `GROFF_GROPDF_PROGRAM_NOTICE`.

	* m4/groff.m4 (GROFF_GROHTML_PROGRAM_NOTICE): Delete.
	* configure.ac: Stop interpolating same.

2026-02-03  G. Branden Robinson <g.branden.robinson@gmail.com>

	* configure.ac: Delete `AM_CONDITIONAL` for no-longer-used
	`USE_GROPDF` configuration parameter.

2026-02-01  G. Branden Robinson <g.branden.robinson@gmail.com>

	* doc/doc.am: De-parameterize production and installation of PDF
	documents created by groff.  We now build all such files
	regardless of gropdf(1)'s service level (see its man page).
	Update population of `pdfmomoption`, `groffmanpagesoption`,
	`PROCESSEDDOCFILES_PDF`, `docpdfdocdir`, and
	`nodist_docpdfdoc_DATA` accordingly.
	($(PROCESSEDDOCFILES_PDF)): Target now exists unconditionally.
	(mostlyclean_doc): Unconditionally delete these built files.

	Completes "action item E" from <https://lists.gnu.org/archive/\
	html/groff/2026-02/msg00004.html>.

2026-02-03  G. Branden Robinson <g.branden.robinson@gmail.com>

	* configure.ac: Disclose identity of Ghostscript command