@@ -242,7 +242,6 @@ echo "\
 ----------------------------------------------------------------------"
 
 GROFF_APPDEFDIR_NOTICE
-GROFF_GHOSTSCRIPT_AVAILABILITY_NOTICE
 GROFF_GHOSTSCRIPT_VERSION_NOTICE
 GROFF_URW_FONTS_NOTICE
 GROFF_UCHARDET_NOTICE
